--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div	class="row">
   <div class="col-md-6 well">
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="save()">
       <fieldset>
         <legend>User</legend>
         <div class="form-group">
@@ -15,12 +15,9 @@
           <label>Email</label>
           <input type="email" class="form-control" formControlName="email">
           <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-            Email is required
+            <div *ngIf="email.errors.required">Email is required</div>
+            <div *ngIf="email.errors.invalidEmail">Enter valid email</div>
           </div>
-        </div>
-        <div class="form-group">
-          <label>Phone</label>
-          <input type="tel" class="form-control">
         </div>
         <div class="form-group">
           <label>Phone</label>
@@ -46,7 +43,7 @@
           <input type="text" class="form-control">
         </div>
       </fieldset>  
-      <button type="submit" class="btn btn-primary" (click)="onClick()">Save</button>
+      <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button>
     </form>
   </div>
 </div>
