--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -21,26 +21,26 @@
         </div>
         <div class="form-group">
           <label>Phone</label>
-          <input type="tel" class="form-control">
+          <input type="text" class="form-control" formControlName="phone">
         </div>
       </fieldset>
-      <fieldset>  
+      <fieldset formGroupName="address">  
         <legend>Address</legend>
         <div class="form-group">
           <label>Street</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="street">
         </div>
         <div class="form-group">
           <label>Suite</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="suite">
         </div>
         <div class="form-group">
           <label>City</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="city">
         </div>
         <div class="form-group">
           <label>ZipCode</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="zipcode">
         </div>
       </fieldset>  
       <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button>
