--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--The whole content below can be removed with the new code.-->
 <app-navbar></app-navbar>
 <div class="container">
     <router-outlet></router-outlet>
