--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div	class="row">
   <div class="col-md-6 well">
-    <form [formGroup]="form" (ngSubmit)="save()">
+    <form [formGroup]="form" (ngSubmit)="saveButton()">
       <fieldset>
         <legend>User</legend>
         <div class="form-group">
@@ -9,41 +9,41 @@
           <div *ngIf="name.touched && name.invalid" class="alert alert-danger">
             <div *ngIf="name.errors.required">Name is required</div>
             <div *ngIf="name.errors.minlength">Username should be minimum {{name.errors.minlength.requiredLength}} characters</div>
-          </div>
+          </div> 
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="email" class="form-control" formControlName="email">
+          <input type="text" class="form-control" formControlName="email">
           <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
             <div *ngIf="email.errors.required">Email is required</div>
             <div *ngIf="email.errors.invalidEmail">Enter valid email</div>
-          </div>
+          </div> 
         </div>
         <div class="form-group">
           <label>Phone</label>
-          <input type="text" class="form-control" formControlName="phone">
+          <input type="text" class="form-control" formControlName="phone"> 
         </div>
       </fieldset>
-      <fieldset formGroupName="address">  
+      <fieldset formGroupName="address">
         <legend>Address</legend>
         <div class="form-group">
           <label>Street</label>
-          <input type="text" class="form-control" formControlName="street">
+          <input type="text" class="form-control" formControlName="street"> 
         </div>
         <div class="form-group">
           <label>Suite</label>
-          <input type="text" class="form-control" formControlName="suite">
+          <input type="text" class="form-control" formControlName="suite"> 
         </div>
         <div class="form-group">
           <label>City</label>
-          <input type="text" class="form-control" formControlName="city">
+          <input type="text" class="form-control" formControlName="city"> 
         </div>
         <div class="form-group">
           <label>ZipCode</label>
-          <input type="text" class="form-control" formControlName="zipcode">
+          <input type="text" class="form-control" formControlName="zipcode"> 
         </div>
-      </fieldset>  
-      <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button>
+      </fieldset>
+      <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button> 
     </form>
   </div>
 </div>
