--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -15,7 +15,7 @@
     <tr *ngFor="let user of users">
       <td>{{ user.name }}</td>
       <td>{{ user.email }}</td>
-      <td><a [routerLink]="[user.id]" (click)="onEditUser(user.id)"><span class="glyphicon glyphicon-edit"></span></a></td>
+      <td><a [routerLink]="[user.id]"><span class="glyphicon glyphicon-edit"></span></a></td>
       <td><span class="glyphicon glyphicon-remove"></span></td>
     </tr>
   </tbody>
